tests/snapshots/integration__integration_tests__bare_repository__bare_repo_prompt_pty__bare_repo_prompt_accept.snap
---
source: tests/integration_tests/bare_repository.rs
expression: "&output"
---
[33m▲[39m [33mBare repo at [1mproject/.git[22m — worktrees will be at [1mproject/.git.feature[22m[39m

[36m❯[39m Configure worktree-path to place worktrees at [1mproject/feature[22m? [1m[y/N/?][22m y
[32m✓[39m [32mSet [1mworktrunk.worktree-path[22m for [1m[TEMP]/project[22m (this clone only):[39m
[107m [0m [2mworktrunk.worktree-path = [0m[2m[32m"{{ repo_path }}/../{{ branch | sanitize }}"[0m

[32m✓[39m [32mCreated branch [1mfeature[22m and worktree @ [1m[TEMP]/project/feature[22m[39m
[33m▲[39m [33mCannot change directory — shell integration not installed[39m
[2m↳[22m [2mTo enable automatic cd, run [4mwt config shell install[24m[22m
